# analytics-publisher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
api_app/: __init__.py  celery_tasks.py  database.py  dependencies.py  events.py  export.py  routers.py  server.py
api_app/clubs/: crud.py  models.py  schemas.py
bot/: api_data_receiver.py  api_football.py  bot.py  data_receiver.py  database.py
